clang-ir/tests/snapshots/snapshot_fixtures__stdlib__math__cbrt.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/stdlib/math/cbrt.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%f\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn cbrt(%arg0: double) -> double [external, c, const, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca double, "x", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 2.700000e+01 : double
        store %3, %1, align 8
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[4]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = get_global @cbrt : (double) -> double*
        %8 = load %1 : double, align 8
        %9 = call @cbrt(%8) : double [const]
        %10 = call @printf(%6, %9) : s32i [all]
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
